# Sudoku

./: .gitignore  CMakeLists.txt  Makefile  README.md  Sudoku.c  Sudoku.go  Sudoku.rs  board.c  board.h  checker.c  checker.h  generator.h  grader.c  grader.h  main.c  main.h  solver.c  solver.h  tests.h
GO/: Sudoku.go
Python/: Sudoku.py  Sudoku.pyx  compiler.py
Rust/: Sudoku.rs
Tests/: solverTests.c  testBoard.c
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/: benchmark.cpp  benchmark.h  board.cpp  board.h  generator.cpp  generator.h  main.cpp  main.h  solver.cpp  solver.h  tests.h  token.cpp  token.h
src/boards/: standard.cpp  standard.h
tests/: checker.cpp  main.cpp  main.h  solver.cpp  test_checker.cpp  test_solver.cpp
tests/sudokus/: 16x16.txt
tests/sudokus/standard/: 16x16.txt  9x9.txt
